Sync test update

--- a/01_bronze_ingest.ipynb
+++ b/01_bronze_ingest.ipynb
@@ -45,7 +45,9 @@
     "# Register cleaned BRONZE table as managed delta\n",
     "df_clean.write.mode(\"overwrite\").saveAsTable(\"etl_demo.bronze_retail_sales\")\n",
     "\n",
-    "display(df_clean.limit(10))\n"
+    "display(df_clean.limit(10))\n",
+    "# test sync\n",
+    "\n"
    ]
   }
  ],
