--- a/02_silver_cleaning.ipynb
+++ b/02_silver_cleaning.ipynb
@@ -115,7 +115,10 @@
     "\n",
     "print(\"Recreated etl_demo.silver_retail_sales with columns:\")\n",
     "print(spark.table(\"etl_demo.silver_retail_sales\").columns)\n",
-    "display(spark.table(\"etl_demo.silver_retail_sales\").limit(10))\n"
+    "display(spark.table(\"etl_demo.silver_retail_sales\").limit(10))\n",
+    "\n",
+    "# test sync\n",
+    "\n"
    ]
   }
  ],
