--- a/03_gold_analytics.ipynb
+++ b/03_gold_analytics.ipynb
@@ -85,7 +85,8 @@
     "\"\"\")\n",
     "\n",
     "print(\"✔ Created: etl_demo.gold_customer_value\")\n",
-    "display(spark.table(\"etl_demo.gold_customer_value\").limit(10))\n"
+    "display(spark.table(\"etl_demo.gold_customer_value\").limit(10))\n",
+    "# test sync\n"
    ]
   }
  ],
